fixing login top spacing

--- a/app/assets/stylesheets/components/_alerts.sass
+++ b/app/assets/stylesheets/components/_alerts.sass
@@ -21,7 +21,6 @@
       cursor: pointer
   a
     color: $color-blue-5
-    text-decoration: underline
 
 .alert-box
   &.error
