--- a/app/assets/stylesheets/pages/_login.sass
+++ b/app/assets/stylesheets/pages/_login.sass
@@ -53,7 +53,7 @@
 
   .login-form-container
     max-width: 600px
-    margin: 0 auto
+    margin: 5em auto 0 auto
     background-color: $color-white
     box-sizing: border-box
     padding: 2rem 3rem
